add content october

--- a/pages/mecanicas.html
+++ b/pages/mecanicas.html
@@ -112,79 +112,6 @@
                     </h2>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Mês de Setembro</strong>
-                    </h4>
-                    <table class="table table-striped">
-                        <thead class="thead-dark">
-                            <tr>
-                                <th scope="col">Data</th>
-                                <th scope="col">Palco</th>
-                                <th scope="col">Porta</th>
-                                <th scope="col">Microfone 1</th>
-                                <th scope="col">Microfone 2</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">Quinta-feira - 05/09</th>
-                                <td>Vitor</td>
-                                <td>Dielson</td>
-                                <td>Dielson</td>
-                                <td>Pedro</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Sábado - 07/09</th>
-                                <td>Everton</td>
-                                <td>Raimundo</td>
-                                <td>Jonatan</td>
-                                <td>Dielson</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Quinta-feira - 12/09</th>
-                                <td>Mário</td>
-                                <td>Vitor</td>
-                                <td>Pedro</td>
-                                <td>Raimundo</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Sábado - 14/09</th>
-                                <td>Elísio</td>
-                                <td>Raimundo</td>
-                                <td>Vitor</td>
-                                <td>Jonatan</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Quinta-feira - 19/09</th>
-                                <td>Everton</td>
-                                <td>Dielson</td>
-                                <td>Jonatan</td>
-                                <td>Pedro</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Sábado - 21/09</th>
-                                <td>Mário</td>
-                                <td>Raimundo</td>
-                                <td>Jonatan</td>
-                                <td>Pedro</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Quinta-feira - 26/09</th>
-                                <td>Vitor</td>
-                                <td>Raimundo</td>
-                                <td>Jonatan</td>
-                                <td>Dielson</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Sábado - 28/09</th>
-                                <td>Dielson</td>
-                                <td>Everton</td>
-                                <td>Vitor</td>
-                                <td>Pedro</td>
-                            </tr>
-                        </tbody>
-                    </table>
-
-                    <h4 style="text-align: center; color: black">
                         <strong>Mês de Outubro</strong>
                     </h4>
                     <table class="table table-striped">
@@ -195,6 +122,8 @@
                                 <th scope="col">Porta</th>
                                 <th scope="col">Microfone 1</th>
                                 <th scope="col">Microfone 2</th>
+                                <th scope="col">Frente</th>
+                                <th scope="col">Bebedouro</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -203,63 +132,81 @@
                                 <td>Elísio</td>
                                 <td>Raimundo</td>
                                 <td>Dielson</td>
+                                <td>Everton</td>
+                                <td>Claudemiro</td>
                                 <td>Jonatan</td>
                             </tr>
                             <tr>
-                                <th scope="row">Sábado - 05/10</th>
-                                <td>Dielson</td>
-                                <td>Vitor</td>
-                                <td>Raimundo</td>
+                                <th scope="row">Domingo - 06/10</th>
+                                <td>Everton</td>
+                                <td>Everton</td>
+                                <td>Jonatan</td>
                                 <td>Claudemiro</td>
+                                <td>Dielson</td>
+                                <td>Pedro</td>
                             </tr>
                             <tr>
                                 <th scope="row">Quinta-feira - 10/10</th>
-                                <td>Everton</td>
-                                <td>Dielson</td>
-                                <td>Pedro</td>
                                 <td>Mário</td>
+                                <td>Dielson</td>
+                                <td>Elísio</td>
+                                <td>Everton</td>
+                                <td>Vitor</td>
+                                <td>Jonatas</td>
                             </tr>
                             <tr>
-                                <th scope="row">Sábado - 12/10</th>
+                                <th scope="row">Domingo - 13/10</th>
                                 <td>Vitor</td>
-                                <td>Raimundo</td>
+                                <td>Claudemiro</td>
                                 <td>Dielson</td>
-                                <td>Jonatan</td>
+                                <td>Raimundo</td>
+                                <td>Raimundo</td>
+                                <td>Everton</td>
                             </tr>
                             <tr>
                                 <th scope="row">Quinta-feira - 17/10</th>
-                                <td>Mário</td>
                                 <td>Dielson</td>
+                                <td>Elísio</td>
                                 <td>Jonatas</td>
+                                <td>Pedro</td>
+                                <td>Claudemiro</td>
                                 <td>Jonatan</td>
                             </tr>
                             <tr>
-                                <th scope="row">Sábado - 19/10</th>
-                                <td>Elisio</td>
-                                <td>Jonatas</td>
+                                <th scope="row">Domingo - 20/10</th>
+                                <td>Claudemiro</td>
                                 <td>Dielson</td>
+                                <td>Raimundo</td>
                                 <td>Vitor</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Quinta-feira - 24/10</th>
-                                <td>Dielson</td>
-                                <td>Dielson</td>
-                                <td>Vitor</td>
+                                <td>Everton</td>
                                 <td>Pedro</td>
                             </tr>
                             <tr>
-                                <th scope="row">Sábado - 26/10</th>
-                                <td>Vitor</td>
+                                <th scope="row">Quinta-feira - 24/10</th>
                                 <td>Jonatas</td>
+                                <td>Raimundo</td>
+                                <td>Everton</td>
+                                <td>Claudemiro</td>
+                                <td>Vitor</td>
                                 <td>Dielson</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Domingo - 27/10</th>
+                                <td>Elísio</td>
+                                <td>Claudemiro</td>
                                 <td>Jonatan</td>
+                                <td>Mário</td>
+                                <td>Dielson</td>
+                                <td>Vitor</td>
                             </tr>
                             <tr>
                                 <th scope="row">Quinta-feira - 31/10</th>
                                 <td>Everton</td>
-                                <td>Raimundo</td>
-                                <td>Vitor</td>
+                                <td>Everton</td>
                                 <td>Pedro</td>
+                                <td>Claudemiro</td>
+                                <td>Raimundo</td>
+                                <td>Jonatan</td>
                             </tr>
                         </tbody>
                     </table>
@@ -270,40 +217,6 @@
                         <a name="ensino"><strong>Presidência aos Sábados e Leitor de A
                                 Sentinela</strong></a>
                     </h2>
-                    <h4 style="text-align: center; color: black">
-                        <strong>Mês de Setembro</strong>
-                    </h4>
-                    <table class="table table-striped">
-                        <thead class="thead-dark">
-                            <tr>
-                                <th scope="col">Data</th>
-                                <th scope="col">Presidente</th>
-                                <th scope="col">Leitor de A Sentinela</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">07/09</th>
-                                <td>José Raimundo</td>
-                                <td>Dielson Paz</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">14/09</th>
-                                <td>Mário Júnior</td>
-                                <td>Josenildo</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">21/09</th>
-                                <td>Paulo Henrique</td>
-                                <td>Marcos Vitor</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">28/09</th>
-                                <td>Elísio Chagas</td>
-                                <td>Paulo Henrique</td>
-                            </tr>
-                        </tbody>
-                    </table>
 
                     <h4 style="text-align: center; color: black">
                         <strong>Mês de Outubro</strong>
@@ -318,22 +231,22 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <th scope="row">05/10</th>
+                                <th scope="row">06/10</th>
                                 <td>Paulo Henrique</td>
                                 <td>Everton</td>
                             </tr>
                             <tr>
-                                <th scope="row">12/10</th>
+                                <th scope="row">13/10</th>
                                 <td>Everton</td>
                                 <td>Marcos Vitor</td>
                             </tr>
                             <tr>
-                                <th scope="row">19/10</th>
+                                <th scope="row">20/10</th>
                                 <td>José Raimundo</td>
                                 <td>Dielson Paz</td>
                             </tr>
                             <tr>
-                                <th scope="row">26/10</th>
+                                <th scope="row">27/10</th>
                                 <td>Elisio Chagas</td>
                                 <td>Josenildo Cruz</td>
                             </tr>
