--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -106,8 +106,8 @@
                     </h2>
 
                     <div>
-                        <img src="../assets/images/data/campoSetembro.jpeg"
-                            alt="Programação Semanal de Serviço de Campo" width="100%" height="100%" />
+                        <img src="../assets/images/data/campoOutubro.jpeg" alt="Programação Semanal de Serviço de Campo"
+                            width="100%" height="100%" />
                     </div>
 
                     <h4 style="text-align: center; color: black">
@@ -236,22 +236,14 @@
                     </h2>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Semana de 26 de Agosto a 01 de Setembro</strong>
-                    </h4>
-                    <div>
-                        <img src="../assets/images/data/carrinho5.jpeg" alt="Programação Carrinho de 22 a 28 de Julho"
-                            width="100%" height="100%" />
-                    </div>
-
-                    <h4 style="text-align: center; color: black">
-                        <strong>Semana de 02 a 08 de Setembro</strong>
+                        <strong>Semana de 30 de Setembro a 06 de Outubro</strong>
                     </h4>
                     <div>
                         <img src="../assets/images/data/carrinho1.jpeg"
-                            alt="Programação Carrinho de 02 a 08 de Setembro" width="100%" height="100%" />
+                            alt="Programação Carrinho de 30 de Setembro a 06 de Outubro" width="100%" height="100%" />
                     </div>
 
-                    <h4 style="text-align: center; color: black">
+                    <!-- <h4 style="text-align: center; color: black">
                         <strong>Semana de 09 a 15 de Setembro</strong>
                     </h4>
                     <div>
@@ -273,7 +265,7 @@
                     <div>
                         <img src="../assets/images/data/carrinho4.jpeg"
                             alt="Programação Carrinho de 23 a 29 de Setembro" width="100%" height="100%" />
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
