update content november

--- a/pages/mecanicas.html
+++ b/pages/mecanicas.html
@@ -112,100 +112,191 @@
                     </h2>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Mês de Outubro</strong>
+                        <strong>Mês de Novembro</strong>
                     </h4>
                     <table class="table table-striped">
                         <thead class="thead-dark">
                             <tr>
                                 <th scope="col">Data</th>
                                 <th scope="col">Palco</th>
-                                <th scope="col">Porta</th>
                                 <th scope="col">Microfone 1</th>
                                 <th scope="col">Microfone 2</th>
+                                <th scope="col">Porta</th>
                                 <th scope="col">Frente</th>
                                 <th scope="col">Bebedouro</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <th scope="row">Quinta-feira - 03/10</th>
-                                <td>Elísio</td>
+                                <th scope="row">Domingo - 03/11</th>
+                                <td>Vitor</td>
+                                <td>Jonatan</td>
+                                <td>Marcos</td>
                                 <td>Raimundo</td>
                                 <td>Dielson</td>
                                 <td>Everton</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Quinta-feira - 07/11</th>
+                                <td>Everton</td>
+                                <td>Pedro</td>
+                                <td>Dielson</td>
+                                <td>Raimundo</td>
+                                <td>Marcos</td>
                                 <td>Claudemiro</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Domingo - 10/11</th>
+                                <td>Mário</td>
+                                <td>Elísio</td>
+                                <td>Raimundo</td>
+                                <td>Vitor</td>
+                                <td>Everton</td>
                                 <td>Jonatan</td>
                             </tr>
                             <tr>
-                                <th scope="row">Domingo - 06/10</th>
-                                <td>Everton</td>
-                                <td>Everton</td>
+                                <th scope="row">Quinta-feira - 14/11</th>
+                                <td>Elisio</td>
+                                <td>Vitor</td>
                                 <td>Jonatan</td>
-                                <td>Claudemiro</td>
-                                <td>Dielson</td>
+                                <td>Raimundo</td>
+                                <td>Marcos</td>
                                 <td>Pedro</td>
                             </tr>
                             <tr>
-                                <th scope="row">Quinta-feira - 10/10</th>
+                                <th scope="row">Domingo - 17/11</th>
+                                <td>Everton</td>
+                                <td>Jonatan</td>
+                                <td>Dielson</td>
+                                <td>Claudemiro</td>
+                                <td>Vitor</td>
+                                <td>Jonatan</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Quinta-feira - 21/11</th>
+                                <td>Mário</td>
+                                <td>Jonatan</td>
+                                <td>Pedro</td>
+                                <td>Raimundo</td>
+                                <td>Everton</td>
+                                <td>Marcos</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Domingo - 24/11</th>
+                                <td>Vitor</td>
                                 <td>Mário</td>
                                 <td>Dielson</td>
-                                <td>Elísio</td>
-                                <td>Everton</td>
-                                <td>Vitor</td>
-                                <td>Jonatas</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Domingo - 13/10</th>
-                                <td>Vitor</td>
                                 <td>Claudemiro</td>
-                                <td>Dielson</td>
-                                <td>Raimundo</td>
-                                <td>Raimundo</td>
-                                <td>Everton</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Quinta-feira - 17/10</th>
-                                <td>Dielson</td>
-                                <td>Elísio</td>
-                                <td>Jonatas</td>
-                                <td>Pedro</td>
-                                <td>Claudemiro</td>
+                                <td>Marcos</td>
                                 <td>Jonatan</td>
                             </tr>
                             <tr>
-                                <th scope="row">Domingo - 20/10</th>
-                                <td>Claudemiro</td>
+                                <th scope="row">Quinta-feira - 28/11</th>
                                 <td>Dielson</td>
-                                <td>Raimundo</td>
                                 <td>Vitor</td>
+                                <td>Dielson</td>
                                 <td>Everton</td>
+                                <td>Claudemiro</td>
                                 <td>Pedro</td>
                             </tr>
+                        </tbody>
+                    </table>
+
+                    <h4 style="text-align: center; color: black">
+                        <strong>Mês de Dezembro</strong>
+                    </h4>
+                    <table class="table table-striped">
+                        <thead class="thead-dark">
                             <tr>
-                                <th scope="row">Quinta-feira - 24/10</th>
-                                <td>Jonatas</td>
-                                <td>Raimundo</td>
-                                <td>Everton</td>
-                                <td>Claudemiro</td>
-                                <td>Vitor</td>
+                                <th scope="col">Data</th>
+                                <th scope="col">Palco</th>
+                                <th scope="col">Microfone 1</th>
+                                <th scope="col">Microfone 2</th>
+                                <th scope="col">Porta</th>
+                                <th scope="col">Frente</th>
+                                <th scope="col">Bebedouro</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">Domingo - 01/12</th>
+                                <td>Elisio</td>
                                 <td>Dielson</td>
+                                <td>Jonatan</td>
+                                <td>Raimundo</td>
+                                <td>Vitor</td>
+                                <td>Marcos</td>
                             </tr>
                             <tr>
-                                <th scope="row">Domingo - 27/10</th>
-                                <td>Elísio</td>
+                                <th scope="row">Quinta-feira - 05/12</th>
+                                <td>Dielson</td>
+                                <td>Raimundo</td>
                                 <td>Claudemiro</td>
+                                <td>Vitor</td>
+                                <td>Everton</td>
                                 <td>Jonatan</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Domingo - 08/12</th>
+                                <td>Everton</td>
+                                <td>Pedro</td>
                                 <td>Mário</td>
                                 <td>Dielson</td>
-                                <td>Vitor</td>
+                                <td>Raimundo</td>
+                                <td>Claudemiro</td>
                             </tr>
                             <tr>
-                                <th scope="row">Quinta-feira - 31/10</th>
+                                <th scope="row">Quinta-feira - 12/12</th>
+                                <td>Vitor</td>
+                                <td>Dielson</td>
+                                <td>Jonatan</td>
+                                <td>Raimundo</td>
+                                <td>Marcos</td>
+                                <td>Pedro</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Domingo - 15/12</th>
+                                <td>Mário</td>
+                                <td>Raimundo</td>
+                                <td>Jonatan</td>
+                                <td>Dielson</td>
                                 <td>Everton</td>
+                                <td>Marcos</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Quinta-feira - 19/12</th>
+                                <td>Elisio</td>
+                                <td>Dielson</td>
+                                <td>Vitor</td>
+                                <td>Jonatas</td>
+                                <td>Vitor</td>
+                                <td>Mário</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Domingo - 22/12</th>
+                                <td>Dielson</td>
+                                <td>Vitor</td>
+                                <td>Pedro</td>
+                                <td>Dielson</td>
+                                <td>Claudemiro</td>
+                                <td>Marcos</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Quinta-feira - 26/12</th>
+                                <td>Vitor</td>
+                                <td>Dielson</td>
+                                <td>Jonatan</td>
+                                <td>Elisio</td>
                                 <td>Everton</td>
                                 <td>Pedro</td>
-                                <td>Claudemiro</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Domingo - 29/12</th>
+                                <td>Everton</td>
+                                <td>Vitor</td>
+                                <td>Pedro</td>
                                 <td>Raimundo</td>
+                                <td>Marcos</td>
                                 <td>Jonatan</td>
                             </tr>
                         </tbody>
@@ -214,12 +305,12 @@
 
                 <div class="fh5co-entry padding">
                     <h2 style="text-align: center">
-                        <a name="ensino"><strong>Presidência aos Sábados e Leitor de A
+                        <a name="ensino"><strong>Presidência aos Domingos e Leitor de A
                                 Sentinela</strong></a>
                     </h2>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Mês de Outubro</strong>
+                        <strong>Mês de Novembro</strong>
                     </h4>
                     <table class="table table-striped">
                         <thead class="thead-dark">
@@ -231,24 +322,64 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <th scope="row">06/10</th>
-                                <td>Paulo Henrique</td>
-                                <td>Everton</td>
+                                <th scope="row">03/11</th>
+                                <td>Claudemiro Rodrigues</td>
+                                <td>Claudemiro Rodrigues</td>
                             </tr>
                             <tr>
-                                <th scope="row">13/10</th>
-                                <td>Everton</td>
+                                <th scope="row">10/11</th>
+                                <td>José Raimundo</td>
                                 <td>Marcos Vitor</td>
                             </tr>
                             <tr>
-                                <th scope="row">20/10</th>
-                                <td>José Raimundo</td>
-                                <td>Dielson Paz</td>
+                                <th scope="row">17/11</th>
+                                <td>Mário N Júnior</td>
+                                <td>Josenildo Cruz</td>
                             </tr>
                             <tr>
-                                <th scope="row">27/10</th>
+                                <th scope="row">24/11</th>
+                                <td>Elisio Chagas</td>
+                                <td>Dielson Paz</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                    <h4 style="text-align: center; color: black">
+                        <strong>Mês de Dezembro</strong>
+                    </h4>
+                    <table class="table table-striped">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th scope="col">Data</th>
+                                <th scope="col">Presidente</th>
+                                <th scope="col">Leitor de A Sentinela</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">01/12</th>
+                                <td>Paulo Henrique</td>
+                                <td>Everton Santa Rosa</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">08/12</th>
+                                <td>Mário N Júnior</td>
+                                <td>Claudemiro Rodrigues</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">15/12</th>
+                                <td>José Raimundo</td>
+                                <td>Marcos Vitor</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">22/12</th>
                                 <td>Elisio Chagas</td>
                                 <td>Josenildo Cruz</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">29/12</th>
+                                <td>Everton Santa Rosa</td>
+                                <td>Mário N Júnior</td>
                             </tr>
                         </tbody>
                     </table>
