--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -106,7 +106,7 @@
                     </h2>
 
                     <div>
-                        <img src="../assets/images/data/campoOutubro.jpeg" alt="Programação Semanal de Serviço de Campo"
+                        <img src="../assets/images/data/campo.jpeg" alt="Programação Semanal de Serviço de Campo"
                             width="100%" height="100%" />
                     </div>
 
@@ -236,36 +236,36 @@
                     </h2>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Semana de 30 de Setembro a 06 de Outubro</strong>
+                        <strong>Semana de 4 a 10 de Novembro</strong>
                     </h4>
                     <div>
-                        <img src="../assets/images/data/carrinho1.jpeg"
-                            alt="Programação Carrinho de 30 de Setembro a 06 de Outubro" width="100%" height="100%" />
+                        <img src="../assets/images/data/carrinho1.jpeg" alt="Programação Carrinho de 4 a 10 de Novembro"
+                            width="100%" height="100%" />
                     </div>
 
-                    <!-- <h4 style="text-align: center; color: black">
-                        <strong>Semana de 09 a 15 de Setembro</strong>
+                    <h4 style="text-align: center; color: black">
+                        <strong>Semana de 11 a 17 de Novembro</strong>
                     </h4>
                     <div>
                         <img src="../assets/images/data/carrinho2.jpeg"
-                            alt="Programação Carrinho de 09 a 15 de Setembro" width="100%" height="100%" />
+                            alt="Programação Carrinho de 11 a 17 de Novembro" width="100%" height="100%" />
                     </div>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Semana de 16 a 22 de Setembro</strong>
+                        <strong>Semana de 18 a 24 de Novembro</strong>
                     </h4>
                     <div>
                         <img src="../assets/images/data/carrinho3.jpeg"
-                            alt="Programação Carrinho de 16 a 22 de Setembro" width="100%" height="100%" />
+                            alt="Programação Carrinho de 18 a 24 de Novembro" width="100%" height="100%" />
                     </div>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Semana de 23 a 29 de Setembro</strong>
+                        <strong>Semana de 25 de Novembro a 01 de Dezembro</strong>
                     </h4>
                     <div>
                         <img src="../assets/images/data/carrinho4.jpeg"
-                            alt="Programação Carrinho de 23 a 29 de Setembro" width="100%" height="100%" />
-                    </div> -->
+                            alt="Programação Carrinho de 26 de Novembro a 01 de Dezembro" width="100%" height="100%" />
+                    </div>
                 </div>
             </div>
         </div>
