--- a/pages/vida_ministerio.html
+++ b/pages/vida_ministerio.html
@@ -106,27 +106,56 @@
 
                 <div class="fh5co-entry padding">
                     <h1 style="text-align: center; color: black">
-                        <strong>Programação Mês de Outubro</strong>
+                        <strong>Programação Mês de Novembro</strong>
                     </h1>
                     <div>
-                        <img src="../assets/images/data/vm_03-10-2024.jpeg"
-                            alt="Reunião Vida e Ministério 03 de Outubro de 2024" width="100%" height="100%" />
+                        <img src="../assets/images/data/vm_07-11-2024.jpeg"
+                            alt="Reunião Vida e Ministério 07 de Novembro de 2024" width="100%" height="100%" />
+                    </div>
+                    br
+                    <div>
+                        <img src="../assets/images/data/vm_14-11-2024.jpeg"
+                            alt="Reunião Vida e Ministério 14 de Novembro de 2024" width="100%" height="100%" />
                     </div>
                     <div>
-                        <img src="../assets/images/data/vm_10-10-2024.jpeg"
-                            alt="Reunião Vida e Ministério 10 de Outubro de 2024" width="100%" height="100%" />
+                        <img src="../assets/images/data/vm_21-11-2024.jpeg"
+                            alt="Reunião Vida e Ministério 21 de Novembro de 2024" width="100%" height="100%" />
                     </div>
                     <div>
-                        <img src="../assets/images/data/vm_17-10-2024.jpeg"
-                            alt="Reunião Vida e Ministério 17 de Outubro de 2024" width="100%" height="100%" />
+                        <img src="../assets/images/data/vm_28-11-2024.jpeg"
+                            alt="Reunião Vida e Ministério 27 de Novembro de 2024" width="100%" height="100%" />
+                    </div>
+                </div>
+
+                <div class="fh5co-entry padding">
+                    <h1 style="text-align: center; color: black">
+                        <strong>Programação Mês de Dezembro</strong>
+                    </h1>
+                    <div>
+                        <img src="../assets/images/data/vm_05-12-2024.jpeg"
+                            alt="Reunião Vida e Ministério 05 de Dezembro de 2024" width="100%" height="100%" />
                     </div>
                     <div>
-                        <img src="../assets/images/data/vm_24-10-2024.jpeg"
-                            alt="Reunião Vida e Ministério 24 de Outubro de 2024" width="100%" height="100%" />
+                        <img src="../assets/images/data/vm_12-12-2024.jpeg"
+                            alt="Reunião Vida e Ministério 12 de Dezembro de 2024" width="100%" height="100%" />
                     </div>
                     <div>
-                        <img src="../assets/images/data/vm_31-10-2024.jpeg"
-                            alt="Reunião Vida e Ministério 31 de Outubro de 2024" width="100%" height="100%" />
+                        <img src="../assets/images/data/vm_19-12-2024.jpeg"
+                            alt="Reunião Vida e Ministério 19 de Dezembro de 2024" width="100%" height="100%" />
+                    </div>
+                    <div>
+                        <img src="../assets/images/data/vm_26-12-2024.jpeg"
+                            alt="Reunião Vida e Ministério 26 de Dezembrode 2024" width="100%" height="100%" />
+                    </div>
+                </div>
+
+                <div class="fh5co-entry padding">
+                    <h1 style="text-align: center; color: black">
+                        <strong>Programação Mês de Janeiro de 2025</strong>
+                    </h1>
+                    <div>
+                        <img src="../assets/images/data/vm_02-01-2025.jpeg"
+                            alt="Reunião Vida e Ministério 02 de Janeiro de 2025" width="100%" height="100%" />
                     </div>
                 </div>
             </div>
